<resources>
    <string name="app_name">Share Sphere</string>
    <string name="et_username">Username</string>
    <string name="et_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_changeMode">Change Mode</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="msg_login">Don\'t have an account yet?</string>
    <string name="btn_signup">Sign Up</string>
    <string name="et_confirmPassword">Confirm Password</string>
    <string name="et_Nickname">Nickname</string>
    <string name="tv_pwdRequire">The password should contain at least 8 characters, a number and both capital and non-capital letters</string>
    <string name="tv_rePwd">Re-enter your password</string>
    <string name="tv_fulNm">This is how you will be viewed by others</string>
    <string name="tv_unq">Your username must be unique</string>
    <string name="msg_signup">Already have an account?</string>
    <string name="tv_signup">Sign Up</string>
    <string name="tv_createAcnt">Create your account</string>
    <string name="title_activity_feed">Feed</string>
    <string name="title_activity_main_feed">MainFeed</string>
    <string name="btn_img">Pick Profile Photo</string>
    <string name="btn_shr">Share</string>
    <string name="btn_cmt">Comment</string>
    <string name="btn_like">Like</string>
    <string name="post_picture">post picture</string>
    <string name="profile_pic">profile picture</string>
    <string name="tv_shrur">Share your thoughts..</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="home">home</string>
    <string name="btn_logout">Log out</string>
    <string name="groups">Groups</string>
    <string name="saved">Saved</string>
    <string name="help">Help</string>
    <string name="events">Events</string>
    <string name="friends">Friends</string>
    <string name="memories">Memories</string>
    <string name="my_posts">My Posts</string>
    <string name="btn_update_post">Update Post</string>
    <string name="change_image">Change Image</string>
    <string name="welcome_back">"Welcome back, "</string>
    <string name="create_post">Create Post</string>
    <string name="pick_a_photo">Pick a photo</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Add Comment</string>
    <string name="write_a_comment">Write your comment</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="add_a_friend">Add a friend</string>
    <string name="what_do_you_want_to_say">What do you want to say?</string>
    <string name="BaseUrl">http://10.0.2.2:8080/api/</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="friends_lst">Friends</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="friends_">Friends</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
</resources>