<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feed.CreatePost"
    android:background="@color/grayTransparent">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/pink"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/btn_changeMode"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:contentDescription="@string/btn_changeMode"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_darkmd"
            style="@style/smallRoundButtonTrans"
            app:tint="@color/dark_pink_red" />

        <ImageButton
            android:id="@+id/btn_home"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:layout_gravity="end"
            app:srcCompat="@drawable/ic_back"
            android:contentDescription="@string/home"
            style="@style/RoundButtonTrans"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/shareLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/post"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp">



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_content"
            android:hint="@string/what_do_you_want_to_say"
            android:layout_margin="5dp"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/iv_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/post_picture"
            android:minWidth="300dp"
            android:minHeight="300dp"
            android:visibility="gone"
            android:paddingBottom="15dp" />

        <Button
            android:id="@+id/btn_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/dark_pink"
            android:text="@string/pick_a_photo" />

        <Button
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:text="@string/create_post" />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>