<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.EditUser">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/purple"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/btn_changeMode"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:contentDescription="@string/btn_changeMode"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_darkmd"
            style="@style/smallRoundButtonTrans"
            app:tint="@color/dark_purple" />

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:layout_gravity="end"
            app:srcCompat="@drawable/ic_back"
            android:contentDescription="@string/home"
            app:tint="@color/dark_purple"
            style="@style/RoundButtonTrans"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            style="@style/header"
            android:layout_marginBottom="7dp"/>

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="7dp"
            android:contentDescription="@string/profile_pic" />

        <EditText
            android:id="@+id/et_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="7dp"/>

        <EditText
            android:id="@+id/et_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="7dp"/>

        <Button
            android:id="@+id/btn_changeImg"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_image"
            android:backgroundTint="@color/purple"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btn_saved"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:backgroundTint="@color/dark_purple"
            android:layout_gravity="center"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>