<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">


    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#C570D3">

        <ImageButton
            android:id="@+id/btn_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_user" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="9"
            android:layout_marginStart="10dp"
            android:text="Yael Dahari"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/btn_changeMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/btn_changeMode"
            app:srcCompat="@drawable/ic_darkmd" />

        <ImageButton
            android:id="@+id/btn_home"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_home"
            android:layout_weight="1"
            android:contentDescription="@string/home" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="15dp">

        <ImageButton
            android:id="@+id/btn_events"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_memories" />


        <ImageButton
            android:id="@+id/btn_friends"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_friends"
            android:scaleType="fitCenter"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btn_memories"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_events"
            android:scaleType="fitCenter"
            android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/memories" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/friends" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/events" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="15dp">

            <ImageButton
                android:id="@+id/btn_help"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_help" />

            <ImageButton
                android:id="@+id/btn_saved"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_saved" />

            <ImageButton
                android:id="@+id/btn_groups"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_groups" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/help" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/saved" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/groups" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:layout_marginBottom="15dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>