<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grayTransparent">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/pink"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/btn_changeMode"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:contentDescription="@string/btn_changeMode"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_darkmd"
            style="@style/smallRoundButtonTrans"
            app:tint="@color/dark_pink_red" />

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:layout_gravity="end"
            app:srcCompat="@drawable/ic_back"
            android:contentDescription="@string/home"
            style="@style/RoundButtonTrans"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:background="@color/post">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">


        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="start"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/profile_pic" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textSize="19sp"
        android:paddingBottom="15dp" />

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textSize="19sp"
        android:inputType="text"
        android:paddingBottom="15dp" />

    <ImageView
        android:id="@+id/iv_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="300dp"
        android:minHeight="300dp"
        android:paddingBottom="15dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/post"
        android:background="#00FFFFFF"
        android:contentDescription="@string/post_picture" />

        <Button
            android:id="@+id/btn_changeImg"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_image"
            android:backgroundTint="@color/dark_pink"
            android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <Button
            android:layout_margin="10dp"
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_update_post"
            android:backgroundTint="@color/dark_pink"/>

    </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>