<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.Requests">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/semiTransparentBlue"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/btn_changeMode"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/btn_changeMode"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_darkmd"
            style="@style/RoundButtonTrans"
            app:tint="@color/dark_blue"/>

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_back"
            android:contentDescription="@string/home"
            style="@style/RoundButtonTrans"
            app:tint="@color/dark_blue" />

        <TextView
            android:id="@+id/tv_comments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="6"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/friend_requests" />


    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/grayTransparent">

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/lstUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.constraintlayout.widget.ConstraintLayout>